<resources>
    <string name="app_name">Convert Generation</string>
    <string name="image">Image</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_qr">Scan QR</string>
    <string name="result">Result</string>
    <string name="cgit">Convert Generation</string>
    <string name="it">Information Technology</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login_detail">Enter your login credentials here.</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="marked">Marked</string>
    <string name="attendance_history">Attendance History</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="logout_desc">Are u sure to logout this account?</string>
    <string name="employee_id">Employee Id</string>
    <string name="attendance_status">Attendance Status</string>
    <string name="in_time">In Time</string>
    <string name="out_time">Out Time</string>
    <string name="description">Description</string>
    <string name="attendance_date">Attendance Date</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="filter">Filter</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="save_changes">Save Changes</string>
    <string name="cnic">CNIC</string>
    <string name="user_name">User Name</string>

    <string name="address">address</string>
    <string name="number">number</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="reset">Reset</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="action_reset_password">Reset Password</string>

    //////////////// Scanner Values////////////////////////


    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <bool name="cameraPreviewShouldFillView">true</bool>
    //////////////// Scanner Values////////////////////////
</resources>
