<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_veiwAttendance"
        android:title="View Attendance"
        />
    <item
        android:id="@+id/action_Reset"
        android:title="@string/action_reset_password"
        />
    <item
        android:id="@+id/edit_Profile"
        android:title="Edit"
        app:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        />

</menu>
