<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_dialog"
    tools:context=".dialogs.LoginDialog">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/progressBar"
        android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/title"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        android:text="@string/login_detail"
        android:textColor="#000"
        android:textSize="14sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_textfield"
        android:textSize="14sp"
        android:hint="@string/email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:id="@+id/txt_email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="40dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_textfield"
        android:textSize="14sp"
        android:hint="@string/password"
        android:padding="10dp"
        android:inputType="textPassword"
        android:id="@+id/txt_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_email"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_password"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/txt_password"
        android:id="@+id/errorMessage"
        android:textColor="@color/colorRed"
        android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/errorMessage"
        app:layout_constraintEnd_toEndOf="@id/txt_password"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:id="@+id/btn_login"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/errorMessage"
        app:layout_constraintEnd_toStartOf="@id/btn_login"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:id="@+id/btn_cancel"/>


</androidx.constraintlayout.widget.ConstraintLayout>