<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_dialog"
    android:padding="25dp"
    tools:context=".dialogs.LogoutDialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/title"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/logout_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/logout_desc"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="#000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/logout_desc"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:id="@+id/btn_logout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/logout_desc"
        app:layout_constraintEnd_toStartOf="@id/btn_logout"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:id="@+id/btn_cancel"/>
</androidx.constraintlayout.widget.ConstraintLayout>