<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Logo"
        android:layout_marginTop="5dp"
        android:text="@string/cgit"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:id="@+id/CGIT"
        app:layout_constraintStart_toStartOf="@id/Logo"
        app:layout_constraintEnd_toEndOf="@id/Logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/CGIT"
        android:layout_marginTop="5dp"
        android:text="@string/it"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/Logo"
        app:layout_constraintEnd_toEndOf="@id/Logo"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        android:src="@drawable/ic_keyboard_arrow_right"
        app:fabSize="normal"/>

</androidx.constraintlayout.widget.ConstraintLayout>