<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AttendanceDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/titleLayout"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/imgbtn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_arrow_back"
            app:tint="#fff"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:layout_marginStart="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendance_history"
            android:textSize="25sp"
            android:textColor="#fff"
            android:layout_marginStart="10dp"
            android:padding="10dp"/>
    </LinearLayout>
    <com.wang.avi.AVLoadingIndicatorView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/progressBar"
        android:elevation="@dimen/_10sdp"
        android:visibility="gone"
        app:indicatorColor="@color/colorAccent"
        app:indicatorName="BallScaleRippleMultipleIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="@id/imgbtn_from"
        app:layout_constraintBottom_toBottomOf="@id/imgbtn_from"
        android:text="@string/from"
        android:id="@+id/From"
        app:layout_constraintStart_toStartOf="parent"/>
   <ImageButton
       android:layout_width="@dimen/_25sdp"
       android:layout_height="@dimen/_25sdp"
       android:src="@drawable/ic_date_range"
       android:background="@null"
       android:scaleType="fitXY"
       app:layout_constraintTop_toTopOf="@id/btn_filterResult"
       app:layout_constraintBottom_toBottomOf="@id/btn_filterResult"
       app:layout_constraintStart_toEndOf="@id/From"
       android:layout_marginStart="@dimen/_5sdp"
       android:tint="@color/colorAccent"
       android:id="@+id/imgbtn_from"
       android:contentDescription="@string/image"/>
    <TextView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/imgbtn_from"
        app:layout_constraintBottom_toBottomOf="@id/imgbtn_from"
        app:layout_constraintStart_toEndOf="@id/imgbtn_from"
        android:id="@+id/txt_from"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/imgbtn_to"
        app:layout_constraintBottom_toBottomOf="@id/imgbtn_to"
        android:text="@string/to"
        android:id="@+id/To"
        app:layout_constraintStart_toEndOf="@id/txt_from"
        android:layout_marginStart="@dimen/_5sdp"/>

    <ImageButton
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/ic_date_range"
        android:background="@null"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="@id/btn_filterResult"
        app:layout_constraintBottom_toBottomOf="@id/btn_filterResult"
        app:layout_constraintStart_toEndOf="@id/To"
        android:layout_marginStart="@dimen/_5sdp"
        android:tint="@color/colorAccent"
        android:id="@+id/imgbtn_to"
        android:contentDescription="@string/image"/>
    <TextView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/imgbtn_to"
        app:layout_constraintBottom_toBottomOf="@id/imgbtn_to"
        app:layout_constraintStart_toEndOf="@id/imgbtn_to"
        android:id="@+id/txt_to"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        android:id="@+id/btn_filterResult"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_filterResult"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/recyclerView"/>
</androidx.constraintlayout.widget.ConstraintLayout>