<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".activities.ResetPasswordActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    >
                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:indicatorColor="@color/colorAccent"
                        android:elevation="@dimen/_10sdp"
                        android:visibility="gone"
                        />
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_password"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/colorAccent"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:boxStrokeColor="@color/colorAccent"
                        android:hint="@string/new_password"
                        app:boxCornerRadiusTopStart="80dp"
                        app:boxCornerRadiusBottomStart="80dp"
                        app:boxCornerRadiusTopEnd="80dp"
                        app:boxCornerRadiusBottomEnd="80dp"
                        app:passwordToggleEnabled="true"
                        app:layout_constraintTop_toBottomOf="@id/title"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/new_pass"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/password"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="40dp"
                        app:boxStrokeColor="@color/colorAccent"
                        android:hint="@string/confirm_password"
                        app:boxCornerRadiusTopStart="80dp"
                        app:boxCornerRadiusTopEnd="80dp"
                        app:boxCornerRadiusBottomStart="80dp"
                        app:boxCornerRadiusBottomEnd="80dp"
                        app:passwordToggleEnabled="true"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirm_pass"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/resetBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset"
                        app:layout_constraintEnd_toEndOf="@id/confirm"
                        app:layout_constraintTop_toBottomOf="@+id/confirm"
                        android:layout_marginTop="25dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorAccent"

                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>